--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "njax-util",
-    "version": "0.0.1",
-    "private": true,
+    "version": "0.0.3",
+    "private": false,
     "scripts": {
         "start": "node app.js"
     },
@@ -24,5 +24,6 @@
         "on-headers":"*",
         "cookie-parser":"*",
         "request":"*"
+
     }
 }
