--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cookie-parser": "*",
     "debug": "*",
     "errorhandler": "*",
-    "express": "*",
+    "express": "^4.13.3",
     "hjs": "*",
     "lodash": "^3.10.1",
     "markdown": "*",
